Update UnpickVisitor.java